--- a/fingerprint-dialog-compat/src/main/res/layout/fingerprint_compat_dialog.xml
+++ b/fingerprint-dialog-compat/src/main/res/layout/fingerprint_compat_dialog.xml
@@ -23,7 +23,7 @@
         android:orientation="vertical"
         android:padding="16dp">
 
-        <android.support.v7.widget.AppCompatImageView
+        <androidx.appcompat.widget.AppCompatImageView
             android:id="@+id/app_icon_iv"
             android:layout_width="48dp"
             android:layout_height="48dp"
@@ -41,7 +41,7 @@
             android:gravity="center"
             android:orientation="vertical">
 
-            <android.support.v7.widget.AppCompatTextView
+            <androidx.appcompat.widget.AppCompatTextView
                 android:id="@+id/title_tv"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -54,7 +54,7 @@
                 android:textColor="@android:color/black"
                 tools:text="@tools:sample/lorem/random"/>
 
-            <android.support.v7.widget.AppCompatTextView
+            <androidx.appcompat.widget.AppCompatTextView
                 android:id="@+id/subtitle_tv"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -65,7 +65,7 @@
                 tools:text="@tools:sample/lorem/random"/>
         </LinearLayout>
 
-        <android.support.v7.widget.AppCompatTextView
+        <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/description_tv"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -75,7 +75,7 @@
             android:textColor="@android:color/secondary_text_light"
             tools:text="@tools:sample/lorem/random"/>
 
-        <android.support.v7.widget.AppCompatImageView
+        <androidx.appcompat.widget.AppCompatImageView
             android:id="@+id/fingerprint_symbol_iv"
             android:layout_width="60dp"
             android:layout_height="60dp"
@@ -87,7 +87,7 @@
             android:padding="14dp"
             android:src="@drawable/ic_fingerprint_white"/>
 
-        <android.support.v7.widget.AppCompatTextView
+        <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/fingerprint_status_tv"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -99,7 +99,7 @@
             android:textColor="@android:color/holo_red_dark"
             tools:text="@tools:sample/lorem"/>
 
-        <android.support.v7.widget.AppCompatButton
+        <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/negative_btn"
             style="@style/Widget.AppCompat.Button.Borderless.Colored"
             android:layout_width="match_parent"
